--- a/visualization/game.html
+++ b/visualization/game.html
@@ -34,7 +34,7 @@ $(document).ready(function(){
 
   var xScale = d3.scale.linear().range([0, width]).domain([-1, 3]);
 
-  var yScale = d3.scale.linear().range([height, 0]).domain([-1, 4]);
+  var yScale = d3.scale.linear().range([height, 0]).domain([-4, 1]);
 
   var color = d3.scale.category10();
 
@@ -48,13 +48,20 @@ $(document).ready(function(){
       return d;
     });
 
+    // hard code radius for puck and Neatos, might be sketchy
+    var radiusMap = {
+      0: 10,
+      1: 20,
+      2: 20
+    }
+
     var selection = svg.selectAll(".dot")
                        .data(data, function(d) { return d.index });
 
     selection.enter()
              .append("circle")
              .attr("class", "dot")
-             .attr("r", 10)
+             .attr("r", function(d) { return radiusMap[d.index] })
              .style("fill", function(d) { return color(d.index) });
 
     selection.attr("cx", function(d) { return xScale(d.position.x)} )
